# metservice-chat

./: .gitignore  LICENSE  Makefile  Procfile  README.md  pyproject.toml
.github/workflows/: main.yaml
.nicegui/: storage-user-f9cb21aa-dce6-4695-8e0e-7aae58c48ac7.json
src/.nicegui/: storage-user-f9cb21aa-dce6-4695-8e0e-7aae58c48ac7.json
src/app/: main.py  models.py  schema.py  test.ipynb  test_time_lists.ipynb
src/app/presentation/: components.py  overview.py  test.py  ui_manager.py
src/app/service/: chat.py  chat_service.py  user_service.py  weather_data.py  weather_service.py
src/app/utils/: auth.py  constants.py
tests/: metservice_api.ipynb  openai.ipynb
