[tool.poetry]
name = "metservice-chat"
version = "0.1.0"
description = "A chat interface integrated with the metservice api to allow users to interact with weather data"
authors = ["Dom Meehan <dom.meehan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pydantic = "^2.6.1"
loguru = "^0.7.2"
geopy = "^2.4.1"
instructor = "^0.5.0"
nicegui = "^1.4.21"
asyncio = "^3.4.3"
httpx = "^0.26.0"
nicegui-highcharts = "^1.0.1"
starlette = "0.36.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
